房间的第一次人自动成为房主，退房时要自动交出房主
